# python-socketio

./: async_main.py  main.py  pyproject.toml
public/: index.html  main.js
